# BiliBiliDownload-Endpoint

./: .gitignore  Main.py  pyproject.toml  readme.md
app/routes/: __init__.py  backend.py  config.py
bilibili/: WebApi.py
database/: DBEntitys.py  UserInformationCache.py  __init__.py
models/: UserConfig.py
utils/: Concurrency.py  Http.py
